# app/controllers/v1/log/clients_controller.rb
@@ -139,7 +139,7 @@ class V1::Log::ClientsController < V1::ApplicationController
   def log_client_params
     params.require(:log).permit(
       :message, :severity, :platform, :environment,
-      :app_version, :browser, :user_agent, :os, :os_version, :device,
+      :version, :browser, :user_agent, :os, :os_version, :device,
       :url, :method,
       context: {},
       stack_trace: [],
@@ -207,7 +207,7 @@ end
 #     },
 #     "platform": "web",
 #     "environment": "production",
-#     "app_version": "2.1.3",
+#     "version": "2.1.3",
 #     "browser": "Chrome 120.0.6099.109",
 #     "os": "macOS",
 #     "os_version": "10.15.0",
