# app/controllers/v1/versions_controller.rb
@@ -1,20 +1,20 @@
-# app/controllers/v1/app_versions_controller.rb
+# app/controllers/v1/versions_controller.rb
 
-class V1::AppVersionsController < V1::ApplicationController
+class V1::VersionsController < V1::ApplicationController
   skip_before_action :authenticate_user!, only: [ :read_current ]
   skip_before_action :enforce_active_platform_session!, only: [ :read_current ]
 
-  # GET /v1/app_versions/current
+  # GET /v1/versions/current
   def read_current
-    result = AppVersionService.check(
-      app_version: params[:app_version],
+    result = VersionService.check(
+      version: params[:version],
       platform: platform_session
     )
 
     render_json_response(
       status_code: 200,
-      message: app_version_message(MessageService::AppVersion::CURRENT_FETCHED),
-      data: { app_version: check_payload(result) }
+      message: version_message(MessageService::Version::CURRENT_FETCHED),
+      data: { version: check_payload(result) }
     )
   end
 
@@ -29,14 +29,14 @@ class V1::AppVersionsController < V1::ApplicationController
     }
 
     if result.latest
-      AppVersionSerializer.new(result.latest, params: extras)
+      VersionSerializer.new(result.latest, params: extras)
         .serializable_hash[:data][:attributes]
     else
-      AppVersionService::EMPTY_CATALOG.merge(extras)
+      VersionService::EMPTY_CATALOG.merge(extras)
     end
   end
 
-  def app_version_message(key, **options)
-    MessageService::AppVersion.t(key, **options)
+  def version_message(key, **options)
+    MessageService::Version.t(key, **options)
   end
 end
