# config/routes.rb
@@ -39,8 +39,8 @@ Rails.application.routes.draw do
     resources :assets, only: %i[index show new create edit update destroy]
     resources :accesses, only: %i[index show new create edit update destroy]
     resources :feedbacks, only: %i[index show new create edit update destroy]
-    resources :app_versions, only: %i[index show new create edit update destroy]
-    resources :app_installs, only: %i[index show]
+    resources :versions, only: %i[index show new create edit update destroy]
+    resources :user_versions, only: %i[index show]
 
     namespace :iam do
       resources :permissions, only: %i[index show new create edit update destroy]
@@ -118,9 +118,9 @@ Rails.application.routes.draw do
       end
     end
 
-    # ===== APP VERSIONS =====
-    get "app_versions/current", to: "app_versions#read_current"
-    post "app_installs", to: "app_installs#create_install"
+    # ===== VERSIONS =====
+    get "versions/current", to: "versions#read_current"
+    post "versions/user-version", to: "user_versions#create_install"
 
     # ===== USERS =====
     get "users/current", to: "users#read_current_user"
@@ -211,13 +211,14 @@ Rails.application.routes.draw do
 
       resources :feedbacks, only: %i[index show update destroy]
 
-      resources :app_versions, only: %i[index show create update] do
+      resources :versions, only: %i[index show create update] do
         collection do
           get :read_discarded, path: "discarded"
+          get "user_versions", to: "user_versions#index"
         end
 
         member do
-          get :read_installs, path: "installs"
+          get :read_user_versions, path: "user_versions"
           post :discard
           post :undiscard
         end
